# Dataset_for_SFT

./: .gitignore  LICENSE  README.md  pyproject.toml
Additional_materials/: nlp_course_seminar_01_bs4.ipynb  nlp_course_seminar_01_scrapy.ipynb  nlp_course_seminar_01_selenium.ipynb
Practice/: implementation-of-word2vec-paper.ipynb  w2v.ipynb  word2vec_Lite.ipynb  word2vec_Lite_and_Hard.ipynb
Practice/1_w2v/: implementation-of-word2vec-paper.ipynb  kek.ipynb  w2v_final.ipynb  word2vec_Lite_and_Hard.ipynb
Practice/2_Text_classification/baseline_catboost/: catboost.ipynb
Practice/2_Text_classification/baseline_rnn/: rnn.ipynb
Practice/2_Text_classification/baseline_tfidf_logreg/: logistic-regression-tfidf.ipynb
Practice/2_Text_classification/baseline_transformers/: transformers.ipynb
Practice/2_Text_classification/scraper/: RT_scraper.ipynb
Seminars/seminar_2/: nlp_course_seminar_02_pytorch.ipynb  nlp_course_seminar_02_vectorization.ipynb
Seminars/seminar_3/: nlp_course_seminar_03_embeddings.ipynb  nlp_course_seminar_03_naive_bayes.ipynb  nlp_course_seminar_03_w2v_translation.ipynb
Seminars/seminar_4/: nlp_course_seminar_04_augmentation.ipynb  nlp_course_seminar_04_cnn.ipynb
Seminars/seminar_5/: nlp_course_seminar_05_ner.ipynb  nlp_course_seminar_05_ner_crf.ipynb
Seminars/seminar_6/: nlp_course_seminar_06_ngram_lm.ipynb  nlp_course_seminar_06_nn_lm.ipynb
Summarization/: README.md  summarization_final.ipynb  summarization_final_100.csv  sumy_transformer.yml
Summarization/data/: df_abstract.csv  df_extract.csv  df_to_summary.csv
Summarization/notebook/: rut5-base-paraphraser.ipynb  summarise_basic_lib.ipynb
summarization/: pyproject.toml  summa_lib_tests.ipynb
