[tool.poetry]
name = "the-first-nlp-project"
version = "0.1.0"
description = "ODS project by Nikita Venediktov"
authors = ["NikitaV <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "the_first_nlp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
