[tool.poetry]
name = "the-first-nlp-project"
version = "0.1.0"
description = "ODS project by Nikita Venediktov"
authors = ["NikitaV <n.venediktov@gmail.com>"]
readme = "README.md"
packages = [{include = "the_first_nlp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.1"
navec = "^0.10.0"
fasttext = "^0.9.2"
nltk = "^3.8.1"
torch = "^2.0.0"
torchmetrics = "^0.11.4"
bokeh = "^3.1.0"
ipywidgets = "^8.0.4"
nlpaug = "^1.1.11"
transformers = "^4.27.1"
sacremoses = "^0.0.53"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
